--- a/stylesheet.css
+++ b/stylesheet.css
@@ -521,7 +521,18 @@ input[type=submit]:hover {
     margin-top: 0;
   }
 }
+.google-map {
+  padding-bottom: 50%;
+  position: relative;
+}
 
+.google-map iframe {
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  position: absolute;
+}
 .footer {
     background-color: white;
     width: 100%;
