--- a/stylesheet.css
+++ b/stylesheet.css
@@ -329,7 +329,7 @@ input.qtyminus { width:25px; height:25px;}
     justify-content: center;
     clear: both;
 }
-.flex-container2 > div {
+.flex-container6 > div {
     background-color: #D95204;
     color: white;
     width: 25%;
@@ -337,7 +337,10 @@ input.qtyminus { width:25px; height:25px;}
     text-align: center;
     line-height: 75px;
     font-size: 0px;
-    display: grid;
+    display: flex;
+    justify-content: center;
+    clear: both;
+    
 }
 .flex-container3 > div {
     font: roboto; 
@@ -532,6 +535,49 @@ input[type=submit]:hover {
   left: 0;
   top: 0;
   position: absolute;
+}
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
 }
 .footer {
     background-color: white;
