--- a/stylesheet.css
+++ b/stylesheet.css
@@ -218,6 +218,13 @@ h24 {
     text-align: left;
     margin-top: 5px;
 }
+h25 {
+    font-size: 70px;
+    color: white;
+    text-align: center;
+    margin-top: 5px;
+    align-content: center;
+}
 .header{
     background-color: #D95204;
     width: 100%;
@@ -585,6 +592,59 @@ input[type=submit]:hover {
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
+}
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Roboto Arial;
+  padding: 20px;
+  background: #D95204;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {
+  float: left;
+  width: 75%;
+  margin-left: 25px;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 22%;
+  padding-left: 20px;
+}
+
+/* Fake image */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {
+    width: 100%;
+    padding: 0;
+  }
 }
 .footer {
     background-color: white;
