--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 body {
 background-color: #D95204;
 background-size: cover;
-font-family: Helvetica, Arial, sans-serif, Roboto, Merienda;
+font-family: Roboto, Merienda;
     margin-top: 100px;
     margin-bottom: 10px;
     margin-right: 150px;
